# VoiceStudio

./: .coveragerc  .cspell.json  .cspellignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  15_MINUTE_WORKFLOW.md  ADVANCED_VOICE_CLONING_RECOMMENDATIONS.md  AGENTS.md  AI_AGENTS_WORKERS_STRATEGY.md  BUILD_ERROR_ANALYSIS_DECEMBER_2025.md  BUILD_ERROR_LOG.md  CHANGELOG.md  CHATGPT5_AGENT_SETUP_GUIDE.md  CHATGPT5_BACKUP_CHECKPOINT.md  CHATGPT5_INTEGRATION_PLAN.md  CHATGPT_CURSOR_AUTO_WORKFLOW.md  CHATGPT_PROJECT_OVERSEER_GUIDE.md  CHATGPT_STRATEGIC_RECOMMENDATIONS.md  CHATGPT_UPGRADE_COMPLETE.md  COMPILATION_ERROR_FIX_PROGRESS.md  COMPREHENSIVE_ERROR_FIX_PLAN_2025-01-28.md  CONTRIBUTING.md  Contracts  DEFAULT_VOICE_CLONING_PROJECT.md  DEPENDENCY_STATUS_2025-01-28.md  DSP_CHAIN_INTEGRATION_COMPLETE.md  Directory.Build.props  Directory.Build.targets  FRAMEWORK_INTEGRITY_ANALYSIS.md  GITHUB_ACTIONS_ERROR_REPORT.md  IMPLEMENTATION_PRIORITIES.md  INVESTIGATION_SUMMARY.txt  KNOWN_ISSUES.md  LICENSE  MISSING_FILES_RECOVERY_GUIDE.md  MISSING_FILES_REPORT_2026-01-30.md  MISSING_FILES_REPORT_UPDATED_2026-01-30.md  (+188 more)
.continue/: config.json
.cursor/: STATE.md
.github/: CODEOWNERS  dependabot.yml
.voicestudio/: quality_metrics.db
JOBS/: analyze.json  analyze_heatmap.sample.json  clone.json  clone_create_profile.sample.json  tts_xtts.json
Recovery Plan/: QUALITY_LEDGER.md  ROLE_SYSTEM_AND_OVERSEER_PROTOCOL.md  VoiceStudio_Architectural_Recovery_and_Completion_Plan.md
SCRIPTS/: Prepare-ContentFolders.ps1  Sign-Provenance.ps1
UltraClone.EngineService/: Program.cs  RoutingAdapter.cs  UltraClone.EngineService.csproj
UltraClone_Spec_Bundle/: README.txt  openapi.yaml
VoiceStudio.Contracts/: VoiceStudio.Contracts.csproj  engine.proto
VoiceStudio.PluginSDK/: README.md
VoiceStudio.UI/: Program.cs
VoiceStudioUltimate_Package/: INSTALLATION_GUIDE.md  package_info.json
VoiceStudioWinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Run-VoiceStudioWinUI.bat  VoiceStudioWinUI.csproj
VoiceStudio_Scripts_Drop1/: README-SCRIPTS.txt  VoiceStudio-AddOns-Install.ps1  VoiceStudio-QualityReport-Demo.ps1  VoiceStudio-RunWS.ps1
_xaml_test/: App.xaml  App.xaml.cs  TestApp.csproj
alembic/: env.py
analytics/: ab_testing.py
api/: batch_endpoints.py  metrics_endpoints.py  middleware.py  models.py  similarity_endpoints.py  utils.py
app/: __init__.py  main_ws_demo.py
backend/: __init__.py  requirements.txt  settings.py
common/: errors.py
config/: alert_rules.json  api_config.json  batch_processing.json  compatibility_matrix.yml  config_loader.py  deployment.config.json  deployment.config.yaml  engines.config.json  engines.config.yaml  engines.yaml  feature_flags.json  gpu_optimization.json  grafana-dashboard.json  metrics_dashboard.json  monitoring_config.json  overseer_config.yaml  prometheus.yml  realtime_conversion.json  similarity_scoring.json  voice_studio_config.json  voicestudio.config.json  voicestudio.config.yaml  voicestudio.yaml
cursor/: .conversation_history.jsonl
data/: voicestudio.db
db/: alembic.ini
docs/: 15_MINUTE_WORKFLOW.md  AUDIT_COMPLETION_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_RULESET.md  COMPLETE_UI_DESIGN_EMBEDDED.md  COMPREHENSIVE_ISSUES_EMBEDDED.md  COMPREHENSIVE_ISSUES_PROBLEMS_ERRORS.md  COMPREHENSIVE_VIOLATIONS_REPORT.md  HANDSHAKE_STATUS.md  MASTER_RULES_COMPLETE_EMBEDDED.md  PANEL_INTEGRATION_GUIDE.md  PRODUCTION_READINESS.md  PROJECT_STATE_EMBEDDED.md  PROJECT_STATUS_EMBEDDED.md  Prompt.md  README.md  START_HERE_EXACT_PLAN.md  TEST_REPORT.md  VOICE_STUDIO_PROJECT_BREAKDOWN_AND_COMPLETION_SUMMARY.md  VS_Engine_Integration_Addendum.md  VoiceStudio_Plugin_Phase3_Complete_Implementation_Plan.md  api_documentation.md  batch_processing.md  deployment.md  lockfile-workflow.md  metrics_dashboard.md  monitoring-setup.md  operations.md  output.md  pip-tools-usage.md  plugin-phase1-plan.md  plugin-phase2-plan.md  plugin-phase3-plan.md  pluginimplementationoverview.md  realtime_conversion.md  voice_similarity_scoring.md  voice_studio_guidelines.md  voicestudio-analysis-part3.md  voicestudio-analysis.md
engines/: README.md  config.json  models.index.json
examples/: per_engine.json  ratings.json  realtime_conversion_client.py
installer/: Deploy-VoiceStudio.ps1  INSTALLATION_GUIDE.md  README-THUMBDRIVE.txt  README.md  VoiceStudio.iss  VoiceStudio.wxs  build-installer.ps1  install.bat  install.ps1  prepare-runtime.ps1  prerequisites.iss  test-installer-lifecycle.ps1  test-installer-silent.ps1  uninstall.ps1  verify-installer-build.ps1  verify-installer.ps1  voice_studio_installer.py
models/: README.md
plugins/: README.md  __init__.py  plugin_registry.py
proof_runs/: model_cache_inventory.csv
schemas/: prosody_transform.schema.json
scripts/: Automate-VoiceStudio.ps1  Clean-VoiceCloner.ps1  Convert-ToNativeWinUI-Fixed.ps1  Convert-ToNativeWinUI-Minimal.ps1  Convert-ToNativeWinUI-Simple.ps1  Generate-SBOM.ps1  Install-Engine-Requirements.ps1  Install-Service.ps1  Launch-VoiceStudioWinUI.ps1  Preserve-VoiceStudioFiles.ps1  README_BASELINE_PROOF.md  Run-VoiceEnginesUpdate.ps1  Simple-Clean-VoiceCloner.ps1  Start-CommandBridge.ps1  Ultimate-ParallelAutomation.ps1  Undo-Clean.ps1  Uninstall-Service.ps1  VoiceEngineAutoInstall.ps1  Wire-Engines.ps1  __init__.py  _env_setup.py  ab_ingest_client.py  add_automation_ids.py  (+155 more)
sdk/python/: pyproject.toml
sdk/python/voicestudio/: __init__.py  client.py
tools/plugin-sdk/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
tools/plugin-sdk/src/voicestudio_plugin_sdk/: cli.py  host_api.py  plugin.py
tools/plugin-sdk/src/voicestudio_plugin_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/plugin-sdk/src/voicestudio_plugin_sdk/schemas/: plugin-ipc-protocol.openapi.yaml
tools/plugin-sdk/tests/: __init__.py  test_cli.py  test_host_api.py  test_manifest.py  test_plugin.py  test_protocol.py
tools/plugin-sdk/voicestudio_sdk/: __init__.py  audio.py  config.py  host.py  plugin.py  testing.py
(+6383 files in other folders)
