# Phase 9: Project Configuration
# Task 9.8: Modern Python project configuration

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicestudio"
version = "1.0.0"
description = "Professional AI voice synthesis studio"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "VoiceStudio Team", email = "team@voicestudio.app" }
]
keywords = ["voice", "synthesis", "tts", "ai", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# Gap Analysis Fix: Synced with requirements.txt
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    # Code quality
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    # Type stubs
    "types-aiofiles>=23.2.0",
    "types-PyYAML>=6.0.0",
    "types-toml>=0.10.0",
    # Security
    "safety>=2.3.0",
    "bandit>=1.7.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]
extras = [
    # Configuration & Validation
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "cerberus>=1.3.5",
    "pydantic-settings>=2.1.0",
    # NLP
    "nltk>=3.8.1",
    "textblob>=0.17.1",
    "langdetect>=1.0.9",
    # TTS utilities
    "gtts>=2.5.0",
    "pyttsx3>=2.90",
    # Utilities
    "tqdm>=4.66.0",
    "cython>=3.0.0",
    "PyPDF2>=3.0.1",
    # Database
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
]
engines = [
    "torch>=2.1.0",
    "TTS>=0.22.0",
    "transformers>=4.36.0",
]
all = ["voicestudio[dev,docs,extras,engines]"]

[project.urls]
Homepage = "https://voicestudio.app"
Documentation = "https://docs.voicestudio.app"
Repository = "https://github.com/voicestudio/voicestudio"
Changelog = "https://github.com/voicestudio/voicestudio/blob/main/CHANGELOG.md"

[project.scripts]
voicestudio = "backend.cli:main"
voicestudio-server = "backend.api.main:run"

[tool.setuptools]
packages = ["backend", "app"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu: marks tests that require GPU",
    "engine: marks tests that require a voice engine",
    "performance: marks tests as performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend", "app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
    | runtime/external
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "build", "dist", "runtime/external"]
known_first_party = ["backend", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "runtime/external",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "TID",    # flake8-tidy-imports (GAP-017: import discipline)
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.flake8-tidy-imports]
# GAP-017: Enforce relative imports within packages
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# GAP-017: Architecture boundary enforcement via import banning
# Routes should not import directly from engine layer
"app.core.engines.llm_local_adapter".msg = "Use backend.services.llm_provider_service instead of direct engine imports"
"app.core.engines.llm_openai_adapter".msg = "Use backend.services.llm_provider_service instead of direct engine imports"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "runtime/external/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
