# Phase 9: Project Configuration
# Task 9.8: Modern Python project configuration

[build-system]
requires = ["setuptools>=68.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicestudio"
version = "1.0.0"
description = "Professional AI voice synthesis studio"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "VoiceStudio Team", email = "team@voicestudio.app" }
]
keywords = ["voice", "synthesis", "tts", "ai", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "fastapi>=0.109.1",
    "uvicorn>=0.27.1",
    "pydantic>=2.5.1",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.10",
    "websockets>=12.1",
    "httpx>=0.26.1",
    "numpy>=1.24.1",
    "scipy>=1.11.1",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "psutil>=5.9.1",
]

[project.optional-dependencies]
# Gap Analysis Fix: Synced with requirements.txt
dev = [
    # Testing
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.1",
    "pytest-cov>=4.1.1",
    "pytest-mock>=3.12.1",
    "pytest-timeout>=2.2.1",
    "pytest-xdist>=3.5.1",
    "httpx>=0.26.1",
    # Code quality
    "black>=24.1.1",
    "ruff>=0.1.1",
    "mypy>=1.8.1",
    "isort>=5.13.1",
    "pylint>=3.0.1",
    # Type stubs
    "types-aiofiles>=23.2.1",
    "types-PyYAML>=6.0.1",
    "types-toml>=0.10.1",
    # Security
    "safety>=2.3.1",
    "bandit>=1.7.1",
]
docs = [
    "sphinx>=7.0.1",
    "sphinx-rtd-theme>=2.0.1",
    "mkdocs>=1.5.1",
    "mkdocs-material>=9.5.1",
]
extras = [
    # Configuration & Validation
    "pyyaml>=6.0.2",
    "toml>=0.10.3",
    "cerberus>=1.3.6",
    "pydantic-settings>=2.1.1",
    # NLP
    "nltk>=3.8.2",
    "textblob>=0.17.2",
    "langdetect>=1.0.10",
    # TTS utilities
    "gtts>=2.5.1",
    "pyttsx3>=2.91",
    # Utilities
    "tqdm>=4.66.1",
    "cython>=3.0.1",
    "PyPDF2>=3.0.2",
    # Database
    "aiosqlite>=0.19.1",
    "asyncpg>=0.29.1",
]
engines = [
    "torch>=2.1.1",
    "TTS>=0.22.1",
    "transformers>=4.36.1",
]
all = ["voicestudio[dev,docs,extras,engines]"]

[project.urls]
Homepage = "https://voicestudio.app"
Documentation = "https://docs.voicestudio.app"
Repository = "https://github.com/voicestudio/voicestudio"
Changelog = "https://github.com/voicestudio/voicestudio/blob/main/CHANGELOG.md"

[project.scripts]
voicestudio = "backend.cli:main"
voicestudio-server = "backend.api.main:run"

[tool.setuptools]
packages = ["backend", "app"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

# ============================================================================
# Tool Configurations
# ============================================================================

# GAP-BQ-003: Pytest configuration consolidated to pytest.ini (canonical source)
# See pytest.ini for test paths, markers, and all pytest options.

[tool.coverage.run]
source = ["backend", "app"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Phase 4 target: 95% coverage
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "assert False",
    "raise RuntimeError",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
    | runtime/external
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "build", "dist", "runtime/external"]
known_first_party = ["backend", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "runtime/external",
    "installer/runtime",
    "tools/chatgpt-localfiles",
    "templates",  # Plugin templates use Jinja2 syntax (not valid Python until rendered)
    "tools/plugin-sdk",  # SDK has its own ruff config and build artifacts
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "TID",    # flake8-tidy-imports (GAP-017: import discipline)
]
ignore = [
    "E501",   # line too long (handled by black)
    "E701",   # multiple-statements-on-one-line (compact guard clauses are acceptable)
    "B008",   # do not perform function calls in argument defaults
    # Pre-existing style issues - baseline cleanup deferred
    "E402",   # module-import-not-at-top-of-file (often intentional)
    "E721",   # type-comparison (isinstance preferred but not required)
    "E722",   # bare-except (legacy code)
    "E731",   # lambda-assignment (style)
    "E741",   # ambiguous-variable-name (false positives)
    "W293",   # blank-line-with-whitespace (trivial)
    "F401",   # unused-import (false positives in try/except blocks)
    "F811",   # redefined-while-unused (intentional overrides)
    "F821",   # undefined-name (false positives from star imports)
    "F841",   # unused-variable (sometimes intentional)
    "TID251", # banned-api (deferred architecture enforcement)
    "TID252", # relative-imports (style preference)
    "SIM102", # collapsible-if (style preference)
    "SIM103", # return-bool-condition-directly (style preference - explicit if/return is clearer)
    "SIM117", # multiple-with-statements (style preference)
    "SIM105", # suppressible-exception (style preference)
    "SIM108", # if-else-block-instead-of-if-exp (style preference)
    "SIM115", # open-file-with-context-handler (false positives)
    "SIM116", # if-else-block-instead-of-dict-lookup (style)
    "SIM113", # enumerate-for-loop (style preference)
    "B007",   # unused-loop-control-variable (often intentional)
    "B023",   # function-uses-loop-variable (false positives)
    "B025",   # duplicate-try-block-exception (legacy)
    "B026",   # star-arg-unpacking-after-keyword-arg (legacy)
    "B904",   # raise-without-from-inside-except (verbose)
    "B905",   # zip-without-explicit-strict (Python 3.9 compat - strict param not available)
    "B017",   # assert-raises-exception (common in tests)
    "B024",   # abstract-base-class-without-abstract-method (design)
    "B027",   # empty-method-without-abstract-decorator (design)
    "RUF005", # collection-literal-concatenation (style)
    "RUF012", # mutable-class-default (common pattern)
    "RUF001", # ambiguous-unicode-character-string (false positives)
    "RUF002", # ambiguous-unicode-character-docstring (EN DASH vs HYPHEN)
    "RUF003", # ambiguous-unicode-character-comment (false positives)
    "RUF006", # asyncio-dangling-task (false positives in tests)
    "RUF021", # parenthesize-chained-operators (style)
    "RUF043", # regex-metacharacters-in-match (pytest pattern matching works fine)
    "RUF059", # unused-unpacked-variable (often intentional)
    "UP006",  # non-pep585-annotation (style)
    "UP035",  # deprecated-import (compat)
    "UP045",  # non-pep604-annotation-optional (style)
    "UP007",  # non-pep604-annotation-union (style)
]

[tool.ruff.lint.flake8-tidy-imports]
# GAP-017: Enforce relative imports within packages
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# GAP-017: Architecture boundary enforcement via import banning
# Routes should not import directly from engine layer
"app.core.engines.llm_local_adapter".msg = "Use backend.services.llm_provider_service instead of direct engine imports"
"app.core.engines.llm_openai_adapter".msg = "Use backend.services.llm_provider_service instead of direct engine imports"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "runtime/external/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
